--- a/style.css
+++ b/style.css
@@ -53,6 +53,11 @@ h6 {
     transition: color 0.3s ease;
 }
 
+h6 {
+    font-weight: 300;
+    color: #118da8;
+}
+
 a.active {
     color: #118da8;
 }
@@ -198,4 +203,155 @@ button:hover {
 }
 button:active {
     filter: brightness(1);
+}
+
+.person {
+    padding: 100px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.person__info {
+    margin-top: 148px;
+}
+
+.person__info__arrow::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(assets/person/arrow.png) no-repeat center center;
+    transform: rotate(-90deg);
+}
+.person__info__arrow {
+    width: 112px;
+    height: 112px;
+    background-color: #118da8;
+    border-radius: 100%;
+    position: relative;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin-bottom: 20px;
+}
+.person__info__arrow:hover {
+    filter: brightness(1.15);
+}
+.person__name {
+    font-size: 65px;
+    margin-bottom: 28px;
+}
+
+.person__paragraph {
+    font-size: 22px;
+    line-height: 33px;
+    font-weight: 400;
+    color: #ffffffb2;
+    width: 70%;
+    margin-bottom: 33px;
+}
+
+.alpha {
+    color: #ffffffb2;
+}
+
+.contact {
+    margin: 100px 0;
+    display: flex;
+    justify-content: space-between;
+    background-color: black;
+    border-radius: 32px;
+    padding: 60px 60px 75px;
+    position: relative;
+}
+
+.contact::after {
+    content: "";
+    position: absolute;
+    top: 85%;
+    left: -2%;
+    width: 100%;
+    height: 100%;
+    background: url(assets/contact/form_lines.svg) no-repeat;
+}
+
+.contact__info {
+    width: 30%;
+}
+
+.contact__form {
+    width: 522px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.contact__form input {
+    width: 438px;
+    padding: 16px 20px;
+    font-size: 18px;
+    line-height: 27px;
+    border-radius: 6px;
+    background-color: #191919;
+    border: none;
+    outline: none;
+}
+
+.contact__form button {
+    width: max-content;
+}
+
+.reviews {
+    margin: 100px 0;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 16px;
+}
+.review {
+    width: 313px;
+    padding: 50px;
+    background-color: black;
+    border-radius: 32px;
+}
+.review > *:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+h3 {
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 43px;
+}
+
+footer {
+    padding-top: 100px;
+    padding-bottom: 128px;
+    display: flex;
+}
+
+.footer__logo {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    margin-right: 240px;
+}
+
+.footer__info > *:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+footer ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    min-width: 222px;
+    margin-right: 18px;
+}
+
+footer ul li:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+footer .info__socials {
+    height: 32px;
 }
